fix: footer and header

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,11 +12,15 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
-
+<style>
+  header {
+    height: 65px;
+  }
+</style>
 <body>
   <header>
     <div class=" bg-light ">
-      <div class="container-fluid bg-white d-flex flex-col position-relative mt-3">
+      <div class="container-fluid bg-white d-flex flex-col position-relative">
         <a class="d-flex align-items-center w-10 bg-white" href="./index.html">
           <img src="./assets/logo_11423533.png" alt="logo" width="60px" height="60px"
             class="d-inline-block align-text-top me-3" />
@@ -252,8 +255,6 @@
               -webkit-border-radius: 5px;
               border-radius: 5px;
               color: #eee;
-              -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
-              -moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
               z-index: 10000;
               color: #777
             }
@@ -408,10 +409,12 @@
       </div> -->
   </main>
 
-  <footer class="d-flex justify-content-center align-items-center bg-dark py-3">
+  <footer class="d-flex justify-content-evenly align-items-center bg-dark">
     <div class="attribution text-light">
-      © Coded by
-      <a href="#">Leskode</a>
+      © 2025 | All Rights Reserved | Operated by Arupal SuperDocs Tech
+    </div>
+    <div class="attribution text-light">
+      <a href="#">Terms & Conditions | Privacy Policy | Refund Terms</a>
     </div>
   </footer>
    <!-- Loader Spinner -->
