--- a/resetpws.html
+++ b/resetpws.html
@@ -78,14 +78,14 @@
     </section>
 </section>
 </main>
-<footer class="d-flex justify-content-center align-items-center bg-dark">
-    <div class="attribution text-light">
-      ©Coded by
-      <a href="https://www.linkedin.com/in/karthick-kaliannan-68b763191/"
-        >Karthick</a
-      >.
-    </div>
-  </footer>
+<footer class="d-flex justify-content-evenly align-items-center bg-dark">
+  <div class="attribution text-light">
+    © 2025 | All Rights Reserved | Operated by Arupal SuperDocs Tech
+  </div>
+  <div class="attribution text-light">
+    <a href="#">Terms & Conditions | Privacy Policy | Refund Terms</a>
+  </div>
+</footer>
   <script type="module" >
   import API_URI from "./config/global.js";
 import reset from "./controllers/reset.js";
