--- a/sign_in.html
+++ b/sign_in.html
@@ -26,7 +26,7 @@
               alt="logo"
               width="60px"
               height="60px"
-              class="me-3"
+              class="d-inline-block align-text-top me-3"
             />
           
           </a>
@@ -76,8 +76,13 @@
     </main>
     
 
-    <footer class="d-flex justify-content-center align-items-center bg-dark">
-      <div class="text-light">©Coded by <a href="#">Leskode</a>.</div>
+    <footer class="d-flex justify-content-evenly align-items-center bg-dark">
+      <div class="attribution text-light">
+        © 2025 | All Rights Reserved | Operated by Arupal SuperDocs Tech
+      </div>
+      <div class="attribution text-light">
+        <a href="#">Terms & Conditions | Privacy Policy | Refund Terms</a>
+      </div>
     </footer>
 
     <script type="module" src="./signin.js"></script>
