--- a/signup.html
+++ b/signup.html
@@ -67,9 +67,14 @@
         </section>
     </main>
 
-    <footer class="bg-dark text-center text-white py-3">
-        <div>© Coded by <a href="#" class="text-white">Leskode</a>.</div>
-    </footer>
+    <footer class="d-flex justify-content-evenly align-items-center bg-dark">
+        <div class="attribution text-light">
+          © 2025 | All Rights Reserved | Operated by Arupal SuperDocs Tech
+        </div>
+        <div class="attribution text-light">
+          <a href="#">Terms & Conditions | Privacy Policy | Refund Terms</a>
+        </div>
+      </footer>
 
     <script type="module" src="./signup.js"></script>
     
