fix: Add link to footer

--- a/sign_in.html
+++ b/sign_in.html
@@ -81,10 +81,11 @@
         © 2025 | All Rights Reserved | Operated by Arupal SuperDocs Tech
       </div>
       <div class="attribution text-light">
-        <a href="#">Terms & Conditions | Privacy Policy | Refund Terms</a>
+        <a href="https://medicalcertificate.in/terms-and-conditions/" target="_blank">Terms & Conditions</a>
+        <a href="https://medicalcertificate.in/refund-cancellation-policy/" target="_blank">Refund/Cancellation Policy</a>
       </div>
     </footer>
 
-    <script type="module" src="./signin.js"></script>
+    <script type="module" src="./signin.js" ></script>
   </body>
 </html>
