--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
       © 2025 | All Rights Reserved | Operated by Arupal SuperDocs Tech
     </div>
     <div class="attribution text-light">
-      <a href="#">Terms & Conditions | Privacy Policy | Refund Terms</a>
+      <a href="https://medicalcertificate.in/terms-and-conditions/" target="_blank">Terms & Conditions</a>
+      <a href="https://medicalcertificate.in/refund-cancellation-policy/" target="_blank">Refund/Cancellation Policy</a>
     </div>
   </footer>
    <!-- Loader Spinner -->
