--- a/patient_form.html
+++ b/patient_form.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Form</title>
     <link rel="shortcut icon" href="./assets/logo_11423533.png" type="image/x-icon">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"
+  />
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"
+  ></script>
     <style>
         *{
             padding: 0;
@@ -13,15 +24,34 @@
         }
         iframe{
             width: 100%;
-            height: 99svh;
+            height: 89svh;
             border: none;
         }
+        footer {
+  min-height: 10svh;
+}
+@media only screen and (max-width: 600px) {
+    footer{
+    font-size: 10px;
+    flex-direction: column;
+  }
+}
     </style>
+  
 </head>
 <body>
     <div class="content-div" id="content-4">
         <iframe src="" title="Patient Form" id="patientform"></iframe>
       </div>
+      <footer class="d-flex justify-content-evenly align-items-center bg-dark">
+        <div class="attribution text-light">
+          © 2025 | All Rights Reserved | Operated by Arupal SuperDocs Tech
+        </div>
+        <div class="attribution text-light">
+          <a href="https://medicalcertificate.in/terms-and-conditions/" target="_blank">Terms & Conditions</a>
+          <a href="https://medicalcertificate.in/refund-cancellation-policy/" target="_blank">Refund/Cancellation Policy</a>
+        </div>
+      </footer>
       <script>
             window.onload = () => {
                 const searchParams = new URLSearchParams(window.location.search);
@@ -33,5 +63,6 @@
                  }
                  }
          </script>
+         
 </body>
 </html>
