--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
             <input type="radio" id="radio-3" name="tabs" />
             <label class="tab" for="radio-3">ABHA</label>
 
-            <!-- <input type="radio" id="radio-4" name="tabs" />
-            <label class="tab" for="radio-4">Consultation</label> -->
+           
             <input type="radio" id="radio-5" name="tabs" />
             <label class="tab" for="radio-5">Support Tab</label>
             <input type="radio" id="radio-6" name="tabs" />
             <label class="tab" for="radio-6">🧑🏻‍⚕️Your Profile</label>
+            <input type="radio" id="radio-4" name="tabs" />
+            <label class="tab" for="radio-4">Certificate Fees</label>
 
 
             <div class="col position-relative" style="text-align: center">
@@ -88,7 +89,7 @@
         <iframe src="https://medicalcertificate.vitalbase.in/" title="ABHA" id="ABHA"></iframe>
       </div>
       <div class="content-div" id="content-4" style="display: none;">
-        <iframe src="https://example3.com" title="Cosultation" id="Cosultation"></iframe>
+        <iframe src="" title=" CertificateFees" id="CertificateFees"></iframe>
       </div>
       <div class="content-div" id="content-5" style="display: none;">
         <h5 class="text-left pt-3 ms-5" style="color: #00307d;">Submit a Request</h5>
