--- a/resetpws.html
+++ b/resetpws.html
@@ -61,7 +61,7 @@
             value=""
           />
           <p id="ConfrimPassworderr"></p>
-          <label for="floatingConfrimPassword">Confrim Password</label>
+          <label for="floatingConfrimPassword">Confirm Password</label>
         </div>
         <button type="button" class="btn btn-primary col-12 mb-3" id="Reset">
           Reset
