--- a/Pdf/index.html
+++ b/Pdf/index.html
@@ -32,10 +32,10 @@
                 <button id="rectangleTool" class="tool-btn"><i class="far fa-square"></i> <span class="rectangle-text">Add Rectangle</span></button>
                 <button id="imageTool" class="tool-btn"><i class="fas fa-image"></i> <span class="image-text"> Add Image</span></button>
                 <button id="previewPDF" class="tool-btn"><i class="fas fa-eye"></i> <span class="preview-text">Preview</span></button>
-                <button id="savePDF" class="tool-btn"><i class="fas fa-save"></i> <span class="save-text">Save PDF </span></button>
-                <button id="uploadPDF" class="tool-btn"><i class="fas fa-upload"></i> <span class="save-text">Save PDF </span></button>
+                <button id="savePDF" class="tool-btn" style="color: rgb(0, 164, 27);"><i class="fas fa-save"></i> <span class="save-text">Save PDF </span></button>
+                <button id="uploadPDF" class="tool-btn" style="color: rgb(0, 164, 27);"><i class="fas fa-upload"></i> <span class="save-text">Upload PDF </span></button>
             
-                <button id="fetchAndLoadPDF" class="tool-btn success"><i class="fa-solid fa-rotate-right"></i><span class="fetch-text">Fetch and Reload PDF</span></button>
+                <button id="fetchAndLoadPDF" class="tool-btn success"><i class="fa-solid fa-rotate-right"></i><span class="fetch-text">Reload</span></button>
             </div>
         </div>
 
