--- a/sign_in.html
+++ b/sign_in.html
@@ -37,7 +37,7 @@
     <main>
       <section class="container d-flex justify-content-center align-items-center  p-2 pt-5 p-lg-5">
         <div class="col-12 col-md-8 col-lg-4" id="signin-form">
-          <h4 class="mb-3">Sign in to access App</h4>
+          <h6 class="mb-3">Sign in to access your personalized portal</h6>
           <div id="liveAlertPlaceholder"></div>
     
           <div class="form-floating mb-3">
